--- a/css/listaDeArtigos.css
+++ b/css/listaDeArtigos.css
@@ -12,14 +12,12 @@
 }
 
 .listaDeArtigos-item {
-  display: inline-block;
   text-align: center;
   margin: 0 auto;
   width: 100%;
-  display: none;
 }
 
-
+/*
 .listaDeArtigos-item:not(:target):first-child{
   display: inline-block;
 }
@@ -27,9 +25,7 @@
 .listaDeArtigos-item:target {
   display: inline-block;
 }
-
-
-
+*/
 
 .listaDeArtigos-artigo-img {
   width: 100%;
