--- a/css/contatoCampo.css
+++ b/css/contatoCampo.css
@@ -26,8 +26,8 @@
   background-image: radial-gradient(circle, #2DA4E7, #2F80ED);
 }
 
-.contatoCampo-checkbox{
-  display: none !important;
+.contatoCampo-checkbox:checked + label{
+  border: red;
 }
 
 .contatoCampo-icone {
